--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ GCLOUD_PATH = /Users/.../bin/gcloud
 GCLOUD_PROJECT_ID = Google Cloud Project ID
 RESULTS_REPO_PATH = /Users/.../llm-benchmark-results
 AUTO_LLM_EVAL_PATH = /Users/.../auto-llm-eval/epam/auto_llm_eval
+LLAMA_SERVER_PATH = /Users/.../llama.cpp/build-arm64-apple-clang-debug/bin
+LLAMA_SERVER_MODELS_PATH = /Users/.../models
 GOOGLE_AI_STUDIO_API_KEY = gcloud services api-keys create \
     --display-name="AI Studio - {NameSurname}" \
     --api-target=service=generativelanguage.googleapis.com \
